tests/course/errors/CreateErrorAll.bru
meta {
  name: CreateErrorAll
  type: http
  seq: 4
}

post {
  url: {{baseUrl}}/courses
  body: json
  auth: none
}

body:json {
  {
    "name": 1,
    "provider": true,
    "category": 9034,
    "duration": false,
    "verifyUrl": "superreallink.com"
  }
}

assert {
  res.status: eq 400
  res.body.message: contains name has to be a string
  res.body.message: contains provider has to be a string
  res.body.message: contains category has to be a string
  res.body.message: contains duration has to be a number
  res.body.message: contains verifyUrl has to be a valid url
}
